Added the newest reports and some testing

--- a/docs/Hub/Transparency Reports/Community/1-23-25.md
+++ b/docs/Hub/Transparency Reports/Community/1-23-25.md
@@ -23,13 +23,11 @@ So let’s break everything down except the first point, which is self-explanato
 
 ## **Donations**?
 
-TBH, we have been running back and forth on the idea of having the ability to donate to us via Liberapay, but we never had set it up because we were debating if we wanted to, but I guess if people really want to chip in and give us a hand, I guess we can; we will make an announcement if we do so.
+TBH, we have been running back and forth on the idea of having the ability to donate to us via [Liberapay](https://liberapay.com/starlightcommunitynetwork), but we never had set it up because we were debating if we wanted to, but I guess if people really want to chip in and give us a hand, I guess we can; we will make an announcement if we do so.
 
 ## **That's it!**
 
 This is our first-ever transparency report. We hope you appreciate a look into SCN, and we hope we can make more of these and keep you informed and feeling more connected with our shimmering community. Stay safe!
 
 
-
-
-
+[Download :material-download:](assets\Transparency Reports\SCN-Transparency-Report[1_23_25].pdf){ .md-button }{:download}
