--- a/docs/Hub/Transparency Reports/Inquiries/2-22-25_2.md
+++ b/docs/Hub/Transparency Reports/Inquiries/2-22-25_2.md
@@ -20,4 +20,4 @@ Ok, let’s break it down:
 Another staff inquiry was the lack of communication; it not only affects CHH but SCN as a whole, with kicks, bans, and network bans just thrown around like its free money, leaving server staff, server owners, and even users confused, so I think it's time to follow CHH and do an internal rework because you deserve better; our community deserves better…
 
 
-[Download :material-download:](assets\Transparency Reports\SCN-Transparency-Report-2[2_22_25].pdf){ .md-button }{:download}
+[Download :material-download:](/assets/Transparency Reports/SCN-Transparency-Report-2[2_22_25].pdf){ .md-button }
