Files are now downloadable

--- a/docs/Hub/Transparency Reports/Incidents/2-22-25_1.md
+++ b/docs/Hub/Transparency Reports/Incidents/2-22-25_1.md
@@ -12,4 +12,4 @@ Based on a previous go-ahead stated months prior, a staff member demoted the ind
 In recent years we have been trying to cut ties with Notion; we generally see them as really scummy and another company that's doing everything to nickel and dime you by locking anything and everything behind a paywall such as dark theme, so your visitors don’t lose their eyesight late at night, which was a key press away till the sudden paywall for $10/mo. Now you might say, “Hey, that's not bad,” but that's per user, which, as of writing this transparency report, we have 8 staff members making it $80/mo. Everyone here is part of the commonwealth, so that eats into our wallets like crazy, so we wanted to come to you, our community, for advice and possible replacements.
 
 
-[Download :material-download:](<a href="https://nightfuryvg.github.io/SCN-Docs/assets/Transparency%20Reports/SCN-Transparency-Report-1[1_22_25].pdf" download></a>){ .md-button }
+[Download :material-download:](/assets/Transparency Reports/SCN-Transparency-Report-1[2_22_25].pdf){ .md-button :download }
