Fix typo in 2-22-25_3.md

--- a/docs/hub/transparency-reports/incidents/2-22-25_3.md
+++ b/docs/hub/transparency-reports/incidents/2-22-25_3.md
@@ -11,7 +11,7 @@ This was written on Oct 5, 2025, but it made the most sense to make this a PT3 t
 
 In this doc, I’ve made some highlights to point out some stuff and connect them together. Stuff that is bolded is also worth pointing out but couldn’t be connected with anything else in a non-confusing manner.
 
-**MKDocs Material:**  With how MKDocs Material  works, or we just don't know how we to highlight in different colors, so just for this, you'll see numbers like this ^0^. The PDF uses highlights.
+**MKDocs Material:**  With how MKDocs Material  works, or we just don't know how to highlight in different colors, so just for this, you'll see numbers like this ^0^. The PDF uses highlights.
 
 ## **The Feb 2 Staff Drama In CHH**
 
